# prova-2_2025-2

./: .gitignore  README.md
blocks/: README.md  blocks.py  grammar.lark  pyproject.toml
blocks/tests/: test_blocks.py
listas/: README.md  grammar.lark  listas.py  pyproject.toml
listas/tests/: test_listas.py
lox/: .gitignore  README.md  fib-loop.lox  fib-recur.lox  pyproject.toml
lox/lox/: ast.py  env.py  grammar.lark  interpreter.py  lox.py  parser.py  runtime.py  testing.py  token.py
lox/tests/: test_questao_a.py  test_questao_b.py  test_questao_c.py
