[project]
name = "lox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lark-parser>=0.12.0",
    "rich>=14.1.0",
]

[project.scripts]
pylox = "lox.lox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
